# Dynamic_SCC

./: .gitignore  CMakeLists.txt  README.md  logFile  output.tmp  output.txt  run.cmd  run.sh  test.sh
include/: debug.hpp  graph.hpp
report/: BTP_Report.tex  Main Content.tex  References.bib
report/Preambles/: commands.sty  titlepage.sty
report/content/: abstract.tex  acknowledgements.tex  appendices.tex  background.tex  conclusion.tex  future_work.tex  introduction.tex  practical_implementation.tex  references.tex  results.tex  scc_tree.tex  theoretical_method.tex
report/content/graph/: dec_internal_node.tex  dec_root_node.tex  inc_ex_add.tex  inc_ex_graph.tex  inc_ex_new_node.tex  inc_ex_new_node_a.tex  scc_tree_construction.tex  scc_tree_with_node.tex
src/: graph.cpp  main.cpp  scc.cpp
tests/input/: example_c1.txt  example_c2.txt  example_c3.txt  example_c4.txt  four_to_one.txt  g1_od.txt  g2_od.txt  g3_od.txt  g4_od.txt  i2.txt  i4.txt  i5.txt  one_scc_nu.txt  one_scc_od.txt  one_scc_oi.txt  one_scc_rr.txt  one_to_four.txt  two_scc_nu.txt  two_scc_od.txt  two_scc_oi.txt  two_scc_rr.txt
tests/output/: example_c1.txt  example_c2.txt  example_c4.txt  four_to_one.txt  g1_od.txt  g2_od.txt  g3_od.txt  g4_od.txt  one_scc_od.txt  one_to_four.txt  two_scc_rr.txt
